# cursor_pm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  e2e_demo.py  feedback_analysis.py  feedback_ingestion.py  generate_artifacts.py  pyproject.toml  requirements.txt  test_feedback_analysis.py
.devcontainer/: devcontainer.json  setup.sh
backend/: requirements.txt
backend/app/: clustering.py  main.py  openai_client.py  pipeline.py  schemas.py
data/: sample_feedback.csv
docs/: PRD.md  jira_tickets.md
example_data/: feedback.csv  sample_ecommerce.csv  sample_fintech.csv  sample_saas.csv
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx
frontend/src/i18n/: LanguageContext.jsx  translations.js
frontend/src/pages/: ArtifactsPage.jsx  DashboardPage.jsx  FeedbackPage.jsx  HowItWorksPage.jsx  InsightsPage.jsx  IntegrationsPage.jsx  LoginPage.jsx  ReportPage.jsx  TrendsPage.jsx
pulse/: __init__.py  config.py  database.py  main.py  models.py
pulse/api/: deps.py  jwt_utils.py  routes.py  schemas.py
pulse/connectors/: api_connector.py  base.py  csv_connector.py  intercom.py  slack.py
pulse/ml/: anomaly.py  clustering.py  embeddings.py  llm.py  sentiment.py
pulse/services/: artifacts.py  ingestion.py  insights.py  intelligence.py  trends.py
scripts/: seed.py
tests/: test_api.py  test_ml.py  test_services.py
