[project]
name = "pulse"
version = "0.1.0"
description = "AI-powered Product Intelligence Platform — turn customer feedback into product strategy"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "anthropic>=0.40",
    "openai>=1.40",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "passlib[bcrypt]>=1.7",
    "pyjwt>=2.7",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.setuptools.packages.find]
include = ["pulse*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
